# py_examples

./: .gitignore  Class_Overview_ChtGPT.txt  CopyFileList.ipynb  compare_files_dev.ipynb  compare_tree.ipynb  copy_directory_tree.ipynb
SCRATCH/: pyproject.toml  typer_demo.py
dungeon_nightmare/: main.py  pyproject.toml  solution.py  test_cases.txt  test_sample_tests.py
heapq1/: gen10.py  main.py  maze1.py  no_test_gen10.py  pyproject.toml  test_maze.py
pl_django_starter/: main.py  pyproject.toml
py314/: main.py  pyproject.toml
py_cw/: ChatApp - PythonPriorityQueue.txt  Huffman_CW.ipynb  Intervals.ipynb  dblinear.ipynb  permutations.ipynb
py_cw02/: find_the_smallest.py  five_boxes.py  lazy_repeater.py  no_test_five_boxes.py  no_test_lazy_repeater.py  no_test_primes.py  no_test_recover_secret.py  no_test_smallest.py  no_test_sum_by_factors.py  no_test_sum_by_factors2.py  print_sevens.py  recover_secret.py  sum_by_factors.py  sum_by_factors2.py  test_wood_cut.py  wood_cut.py
py_cw03/: calc_expr.py  equal_to_24.py  equal_val_funcs.py  integer_partitions.py  main.py  no_test_integer_partitions.py  no_test_nonogram_encoder.py  no_test_number_combos.py  no_test_observed_pin.py  no_test_range_extraction.py  no_test_right_wrong_guess.py  no_test_sudoku_naked.py  nonogram_encoder.py  number_combos.py  observed_pin.py  postfix_evaluator.py  puzzle_solve.py  (+11 more)
rp_webscrape/: pyproject.toml
rp_webscrape/bandcamp/: __main__.py  pyproject.toml
rp_webscrape/bandcamp/app/: player.py  tui.py
rp_webscrape/bandcamp/web/: base.py  elements.py  main.py  pages.py
(+87 files in other folders)
